--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body{
   background-image: url(./images/photo1.png);
   margin-top: 30px;
   margin-left: 3rem;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .box2{
